1C-7: Were added the ablity to add new row. Major changes for sturcture.

--- a/EP/AngularApp/AngularTemplates/CreateCatalog.html
+++ b/EP/AngularApp/AngularTemplates/CreateCatalog.html
@@ -1,7 +1,7 @@
 ﻿<md-dialog aria-label="Create Catalog" class="w-25">
     <md-toolbar>
         <div class="md-toolbar-tools">
-            <h2>Create Catalog</h2>
+            <h2>Create a Table</h2>
             <span flex></span>
             <md-button class="md-icon-button" ng-click="cancel()">
                 <i class="material-icons">cancel</i>
@@ -14,7 +14,7 @@
             <div class="md-dialog-content" layout="column">
                 <div class="column">
                     <md-input-container class="w-100">
-                        <label>Catalog Name</label>
+                        <label>Initial Column Name</label>
                         <input name="catalog" ng-model="modalData.catalogName" ng-required />
                     </md-input-container>                    
                 </div>
