1C-8: Were added the ability to add a new column and sub-column.

--- a/EP/AngularApp/AngularTemplates/AddRow.html
+++ b/EP/AngularApp/AngularTemplates/AddRow.html
@@ -13,7 +13,7 @@
         <form name="addRowForm" ng-cloak>
             <div class="md-dialog-content" layout="column">
                 <div class="column">
-                    <div class="form-group" ng-repeat="column in modalData.columns">
+                    <div class="form-group" ng-repeat="column in modalData.columns" ng-if="$index === 0 || !column.IsInitial">
                         <md-input-container class="w-100">
                             <label ng-bind="column.Name"></label>
                             <input name="{{column.Name}}" ng-model="column.Value" required />                            
